added timer button with pause/play styles.

--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,2 +1,4 @@
-<app-timer-countdown></app-timer-countdown>
+<app-timer-button>
+  <app-timer-countdown></app-timer-countdown>
+</app-timer-button>
 <app-timer-label></app-timer-label>
