--- a/src/app/timer-button/timer-button.component.scss
+++ b/src/app/timer-button/timer-button.component.scss
@@ -17,16 +17,21 @@
   transition: 100ms all ease;
   cursor: pointer;
   position: absolute;
-
   top: 5px;
   left: 7px;
-}
-.button__action--play {
-  border-style: solid;
-  border-width: 10px 0 10px 20px;
-}
+  opacity: 0;
 
-.button__action--pause {
-  border-style: double;
-  border-width: 0 0 0 16px;
+  &--play {
+    border-style: solid;
+    border-width: 10px 0 10px 20px;
+  }
+
+  &--pause {
+    border-style: double;
+    border-width: 0 0 0 16px;
+  }
+
+  &:hover {
+    opacity: 1;
+  }
 }
