timer in seconds added.
remaining seconds feature added.

debugged countdown.

--- a/src/app/timer-button/timer-button.component.html
+++ b/src/app/timer-button/timer-button.component.html
@@ -1,4 +1,4 @@
 <button class="button">
-  <i class="button__action button__action--play"></i>
+  <i class="button__action" [ngClass]="buttonState"></i>
   <ng-content></ng-content>
 </button>
