--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,4 +1,7 @@
-<app-timer-button>
-  <app-timer-countdown></app-timer-countdown>
+<app-timer-button
+    (click)="toggleTimerButton()"
+    [buttonState]="buttonState"
+>
+    <app-timer-countdown></app-timer-countdown>
 </app-timer-button>
 <app-timer-label></app-timer-label>
