--- a/src/app/todo-list-item/todo-list-item.component.html
+++ b/src/app/todo-list-item/todo-list-item.component.html
@@ -1,6 +1,6 @@
 <div class="view">
   <input class="toggle" type="checkbox" (click)="toggleTodoComplete(todo)" [checked]="todo.complete">
   <label class="view__label">{{todo.title}}</label>
-  <app-timer></app-timer>
+  <app-timer [item]="todo"></app-timer>
   <button class="destroy" (click)="removeTodo(todo)"></button>
 </div>
