--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -2,6 +2,6 @@
     (click)="toggleTimerButton()"
     [buttonState]="buttonState"
 >
-    <app-timer-countdown [lapsedSeconds]="currentSeconds"></app-timer-countdown>
+    <app-timer-countdown [remainingSeconds]="currentSeconds"></app-timer-countdown>
 </app-timer-button>
-<app-timer-label></app-timer-label>
+<app-timer-label [remainingSeconds]="currentSeconds"></app-timer-label>
