--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,11 +1,12 @@
-<section class="main" *ngIf="todos.length > 0">
-  <ul class="todo-list">
-    <li *ngFor="let todo of todos" [class.completed]="todo.complete">
-      <app-todo-list-item
-        [todo]="todo"
-        (toggleComplete)="onToggleTodoComplete($event)"
-        (remove)="onRemoveTodo($event)"
-      (update)="onUpdateTodo($event)"></app-todo-list-item>
-    </li>
-  </ul>
+<section *ngIf="todos.length > 0" class="main">
+    <ul class="todo-list">
+        <li *ngFor="let todo of todos" [class.completed]="todo.complete">
+            <app-todo-list-item
+                (remove)="onRemoveTodo($event)"
+                (toggleComplete)="onToggleTodoComplete($event)"
+                (update)="onUpdateTodo($event)"
+                [todo]="todo">
+            </app-todo-list-item>
+        </li>
+    </ul>
 </section>
