--- a/src/app/timer-label/timer-label.component.html
+++ b/src/app/timer-label/timer-label.component.html
@@ -1,1 +1,3 @@
-<span class="timer__label">({{lapsedSeconds | timeDisplay}})</span>
+<span class="timer__label" [class.timer__label--hidden]="!lapsedSeconds">
+    ({{lapsedSeconds | timeDisplay}})
+</span>
